Changes in QMPlay2 build 16.09.02:
	- don't load subtitles which needs decoder without the decoder,
	- fix displaying multi-line graphical subtitles,
	- don't crop non-graphics subtitles on zoom,
	- add quality button in YouTube browser,
	- download "youtube-dl" if necessary,
	- get rid of "QtNetwork" module,
	- add MPEG-TS programs support,

Changes in QMPlay2 build 16.08.19:
	- add key shortcuts editor to Settings (thanks Zamarin Arthur for help),
	- respect HTML tags in classic subtitles,
	- use scroll area for equalizer sliders,
	- add presets to equalizer,
	- playlist bugfix,
	- OpenGL2 bugfix,

Changes in QMPlay2 build 16.07.20:
	- don't fetch the stream url twice on add and play action (speed up YouTube video opening),
	- move most settings Ui from C++ to Qt forms (thanks Zamarin Arthur for help),
	- play the entire audio if playback has been finished (don't drop samples),
	- block screen saver also on full screen when only audio is playing,
	- add sharpness to video adjustment (OpenGL2 and VDPAU only),
	- add key bindings (currently only in settings file),
	- sort current group instead of entire playlist,
	- HW and SW filters settings in the same place,
	- rename video equalizer -> video adjustment,
	- fix OGG pictures for taglib 1.11 and newer,
	- fix bug in tag editor (non-Windows OS'es),
	- updated Russian translation (victorr2007),
	- fix downloading cover art from Last.fm,
	- move OpenGL2 shaders to resources,
	- handle multimedia keys on Windows,
	- properly handle chained OGG files,
	- add sharpness shader to OpenGL2,
	- display toolbar in compact view,
	- move online contents to GitHub,
	- Windows updater fixes,
	- add contributors tab,
	- bugfix,

Changes in QMPlay2 build 16.07.07:
	- Ubuntu Unity integration (MPRIS2 and shortcut groups),
	- added video equalizer to "Settings/Video filters",
	- new "Concept" icons by Alexey Varfolomeev,
	- updated Russian translation (victorr2007),
	- properly add many files containing tracks,