@@ -1,5 +1,6 @@
 Changes in QMPlay2 build 16.09.02:
 	- don't load subtitles which needs decoder without the decoder,
+	- add checkbox to disable PBO in OpenGL2 module settings,
 	- fix displaying multi-line graphical subtitles,
 	- don't crop non-graphics subtitles on zoom,
 	- add quality button in YouTube browser,
